feat(xss): add cookie for authentification systel
add cors options
add cookie parser
create and remove cookie
add new route to check auth status

feat/xss-002/add-cookie

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ichraknouira/failleXSS_Back_End#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.3"
   }
